force-app/main/default/objects/Extras__c/Extras__c.object-meta.xml
<CustomObject>
    <label>Extras</label>
    <nameField>
        <displayFormat>EX-{0000000}</displayFormat>
        <label>Extras Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extras</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>