force-app/main/default/objects/Extras__c/fields/BowledBy__c.field-meta.xml
<CustomField>
    <fullName>BowledBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bowled By</label>
    <referenceTo>GamePlayer__c</referenceTo>
    <relationshipLabel>Extras</relationshipLabel>
    <relationshipName>Extras1</relationshipName>
    <type>Lookup</type>
</CustomField>