force-app/main/default/objects/Extras__c/fields/Partnership__c.field-meta.xml
<CustomField>
    <fullName>Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partnership</label>
    <referenceTo>Partnership__c</referenceTo>
    <relationshipLabel>Extras</relationshipLabel>
    <relationshipName>Extras</relationshipName>
    <type>Lookup</type>
</CustomField>