force-app/main/default/objects/Extras__c/fields/RunsInExtras__c.field-meta.xml
<CustomField>
    <fullName>RunsInExtras__c</fullName>
    <label>Runs in Extras</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>