force-app/main/default/objects/Extras__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wide</fullName>
            </value>
            <value>
                <fullName>No Ball</fullName>
            </value>
            <value>
                <fullName>Bye</fullName>
            </value>
            <value>
                <fullName>Leg Bye</fullName>
            </value>
            <value>
                <fullName>Penalty Runs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>