force-app/main/default/objects/Extras__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Inning__c</columns>
    <columns>NAME</columns>
    <columns>BowledBy__c</columns>
    <columns>Partnership__c</columns>
    <columns>RunsInExtras__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>